clap_derive/tests/ui/skip_flatten.stderr
error: subcommand, flatten and skip cannot be used together
  --> $DIR/skip_flatten.rs:17:18
   |
17 |     #[clap(skip, flatten)]
   |                  ^^^^^^^

error[E0277]: the trait bound `MakeCookie: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/skip_flatten.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `MakeCookie`
